typescript/checker/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty2.ts.stderr
error: NoSuchVar {
    span: Span {
        lo: BytePos(
            34,
        ),
        hi: BytePos(
            40,
        ),
        ctxt: #0,
    },
    name: Atom('Symbol' type=static),
}
 --> $DIR/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty2.ts:3:6
  |
3 |     [Symbol.unscopables](): string;
  |      ^^^^^^

